--- a/src/wangfuji/css/index.css
+++ b/src/wangfuji/css/index.css
@@ -1611,7 +1611,7 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .loadingWrap .page2 .wrap .upload-group .upload-area .uploads .upload-bg { display: block; width: 3.6rem; margin: 0 auto; }
 
-.loadingWrap .page2 .wrap .upload-group .upload-area .uploads .canvas2 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.loadingWrap .page2 .wrap .upload-group .upload-area .uploads .canvas2 { position: absolute; top: 0; left: 0; width: 100%; }
 
 .loadingWrap .page2 .wrap .upload-group .upload-area .fileUpload { position: absolute; left: 0; top: 0; z-index: 2; display: block; width: 100%; height: 100%; opacity: 0; }
 
