--- a/src/wangfuji/scss/index.scss
+++ b/src/wangfuji/scss/index.scss
@@ -324,7 +324,7 @@ img{
 							top: 0;
 							left: 0;
 							width: 100%;
-							height: 100%;
+							// height: 100%;
 						}
 					}
 					.fileUpload{
