--- a/src/wangfuji/css/index.css
+++ b/src/wangfuji/css/index.css
@@ -1611,7 +1611,9 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .loadingWrap .page2 .wrap .upload-group .upload-area .uploads .upload-bg { display: block; width: 3.6rem; margin: 0 auto; }
 
-.loadingWrap .page2 .wrap .upload-group .upload-area .uploads .canvas2 { position: absolute; top: 0; left: 0; width: 100%; }
+.loadingWrap .page2 .wrap .upload-group .upload-area .uploads .canvasBox { position: absolute; top: 0; left: 0; width: 100%; }
+
+.loadingWrap .page2 .wrap .upload-group .upload-area .uploads .canvasBox .canvas2 { width: 100%; }
 
 .loadingWrap .page2 .wrap .upload-group .upload-area .fileUpload { position: absolute; left: 0; top: 0; z-index: 2; display: block; width: 100%; height: 100%; opacity: 0; }
 
@@ -1681,7 +1683,15 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .ranklistWrap .wrap .rank-title .rank .ranking { margin: 0.6rem 0; font-size: 2.4rem; color: #3f2c01; }
 
-.ranklistWrap .wrap .rank-title .rank .praise { font-size: 0.4rem; color: #745f31; }
+.ranklistWrap .wrap .rank-title .rank .praise { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+
+.ranklistWrap .wrap .rank-title .rank .praise .zan { font-size: 0.4rem; color: #745f31; }
+
+.ranklistWrap .wrap .rank-title .rank .praise .like { position: relative; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 0.96rem; height: 0.84rem; margin-left: 0.52rem; font-size: 0.4rem; color: #3f2c01; background-image: url(../images/like.png); -webkit-background-size: 100% 100%; background-size: 100%; background-repeat: no-repeat; background-position: center; }
+
+.ranklistWrap .wrap .rank-title .rank .praise .like.active { background-image: url(../images/like-active.png); color: #ffffff; }
+
+.ranklistWrap .wrap .rank-title .rank .praise .like .add { display: none; position: absolute; top: 0; right: 0; -webkit-transform: translate(100%, -100%); -ms-transform: translate(100%, -100%); transform: translate(100%, -100%); font-size: 0.4rem; color: #d9002a; }
 
 .ranklistWrap .wrap .rank-title .bottle { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
 
